add missing files,just for backup

--- a/src/components/custom/Reply/ReplyItem.css
+++ b/src/components/custom/Reply/ReplyItem.css
@@ -1,3 +1,8 @@
+.wrap:not(:first-child) {
+    border-top: 1px solid #f0f2f7;
+    margin-top: 20px;
+}
+
 .fixed-operationBar {
     position: fixed;
 
