--- a/src/components/custom/Reply/ReplyItemOperation.css
+++ b/src/components/custom/Reply/ReplyItemOperation.css
@@ -1,60 +1,103 @@
 .wrap {
     margin-top: 30px;
-    height: 50px;
+    height: 40px;
+    line-height: 40px;
 }
 
 .btn {
-    border: 1px solid #ccd8e1;
-    border-radius: 3px;
-    line-height: 32px;
+    line-height: inherit;
 
     text-align: center;
+    vertical-align: middle;
 }
 
 .btn-vote {
+    composes: btn;
+
+    border: 1px solid #ccd8e1;
+    border-radius: 3px;
     padding: 0 10px;
-    width: 16px;
-    height: 9px;
 
     color: #2d84cc;
-    background: #ebf3fb;
-    border-color: #ebf3fb;
+    background: transparent;
+}
+
+.btn-vote > svg {
+    vertical-align: -10%;
 }
 
 .btn-praise {
-    composes: btn btn-vote;
+    composes: btn-vote;
 }
 
-.btn-thumbsdown {
-    composes: btn btn-vote;
+.btn-praise:hover > svg {
+    color: #f3773e;
 }
 
-.otherBtnMargin {
+.btn-thumbdown {
+    composes: btn-vote;
+
+    margin-left: 5px;
+}
+
+.btn-thumbdown:hover > svg {
+    color: #080808;
+}
+
+.otherBtn {
+    composes: btn;
+
     border: none;
     margin-left: 30px;
-    line-height: 34px;
 
     font-size: 14px;
 
     background-color: transparent;
 }
 
+.otherBtn > svg {
+    margin-right: 10px;
+
+    color: #000;
+}
+
+.otherBtn:hover {
+    color: #ee8054;
+}
+
 .btn-comment {
-    composes: otherBtnMargin;
+    composes: otherBtn;
 }
 
 .btn-comment > svg {
-    margin-right: 10px;
+    vertical-align: -6%;
 }
 
 .btn-share {
-    composes: otherBtnMargin;
+    composes: otherBtn;
+}
+
+.btn-share > svg {
+    vertical-align: -9%;
 }
 
 .riseOrFallBtn {
-    border: none;
+    composes: btn;
 
+    border: none;
+    line-height: inherit;
+
+    font-size: 14px;
+    letter-spacing: 0.5em;
     background-color: transparent;
+}
+
+.riseOrFallBtn:hover {
+    color: rgba(84, 75, 73, 0.66);
+}
+
+.riseOrFallBtn > svg {
+    vertical-align: initial;
 }
 
 .btn-expand {
@@ -73,12 +116,21 @@
     margin-left: auto;
 }
 
+.icon-vote {
+    width: 20px;
+    height: 20px;
+
+    color: #4898d3;
+}
+
 .icon-praise {
+    composes: icon-vote;
+
     margin-right: 7px;
 }
 
-.icon-thumbsdown {
-    transform: rotate(180deg);
+.icon-thumbdown {
+    composes: icon-vote;
 }
 
 .icon-comment {
