just for backup

--- a/src/components/custom/Reply/ReplyItemOperation.css
+++ b/src/components/custom/Reply/ReplyItemOperation.css
@@ -73,6 +73,12 @@
     vertical-align: -6%;
 }
 
+.share-wrap {
+    position: relative;
+
+    display: inline-block;
+}
+
 .btn-share {
     composes: otherBtn;
 }
