just for backup

--- a/src/components/custom/Reply/ReplyItem.css
+++ b/src/components/custom/Reply/ReplyItem.css
@@ -7,8 +7,11 @@
     position: fixed;
 
     bottom: -1px;
-    width: 57%;
 
     background: #fff;
     box-shadow: 0 -1px 3px rgba(0,34,77,.05);
+}
+
+.commentList-wrap {
+    border: 1px solid rgba(204, 17, 11, 0.75);
 }
