--- a/src/containers/CommentList/index.css
+++ b/src/containers/CommentList/index.css
@@ -8,7 +8,7 @@
 
 .header {
     padding: 0 16px;
-    height: 50px;
+    line-height: 50px;
 
     border-bottom: 1px solid #f0f2f7;
     border-radius: 2px;
