--- a/src/containers/CommentList/index.css
+++ b/src/containers/CommentList/index.css
@@ -26,7 +26,8 @@
 }
 
 .editor-wrap {
-    border-top: 1px solid #ebeef5;
+    margin-top: 30px;
+    border-top: 1px solid #379ef5;
     padding: 12px 16px;
 
     background: #fff;
