--- a/src/components/custom/QuietWater/QuietWaterHeader.css
+++ b/src/components/custom/QuietWater/QuietWaterHeader.css
@@ -1,7 +1,7 @@
 .wrap {
     position: relative;
 
-    border-bottom: 1px solid #f0f2f7;
+    border-bottom: 1px solid #a7b3ff;
     line-height: 30px;
 
     z-index: 100;
