just for backup

--- a/src/components/SvgIcon/index.css
+++ b/src/components/SvgIcon/index.css
@@ -1,6 +1,6 @@
 .icon {
     /* 通过设置 font-size 来改变图标大小 */
-    width: 1em; height: 1em;
+    /* width: 1em; height: 1em; */
 
     /* 图标和文字相邻时，垂直对齐 */
     vertical-align: -0.15em;
