--- a/src/components/custom/Reply/ReplyItemOperation.css
+++ b/src/components/custom/Reply/ReplyItemOperation.css
@@ -132,6 +132,10 @@
     margin-left: auto;
 }
 
+:global(.en-us) .btn-expand {
+    letter-spacing: 0;
+}
+
 .btn-fold {
     composes: riseOrFallBtn;
 
